--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 
+* Store areas ways that go around a tile in the tile in the middle
+
 * Missing border treatment: Nodes, Ways and Relations near a border
   should be saved in the neighbour tiles, too.
 
@@ -9,3 +11,5 @@
   memory exhaustion. Write a memory optimized version.
 
 * make it possible to easily switch to other zoom-levels (harder task)
+  - at least zoomlevels < 13 should be easy, add support for those
+
